--- a/NotificationInANdroid/app/src/main/res/values/strings.xml
+++ b/NotificationInANdroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">NotificationInANdroid</string>
+    <string name="app_name">NotificationInAndroid</string>
 </resources>
